--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([\w\d]+)\.html$ index.php?page=$1 [QSA,L]
+RewriteRule ^(.+)$ index.php/$0 [QSA,L]
